# neurodiff

./: .gitignore  COPILOT_INSTRUCTIONS.md  README.md  action.yml  arch-rules.yaml  pyproject.toml
.github/workflows/: neurodiff.yml
neurodiff/: __init__.py
neurodiff/cli/: __init__.py  main.py
neurodiff/core/: __init__.py  ast_engine.py  git_parser.py  semantic_events.py
neurodiff/engines/: __init__.py  arch_engine.py  architecture_engine.py  cognitive_engine.py  context_engine.py  correction_engine.py  duplication_engine.py  llm_engine.py  security_engine.py
neurodiff/integrations/: __init__.py  github.py
neurodiff/output/: __init__.py  github_commenter.py  html_reporter.py  markdown_formatter.py  reporter.py  sarif_formatter.py
tests/: __init__.py  test_arch_engine.py  test_ast_engine.py  test_cicd.py  test_cognitive_engine.py  test_duplication_engine.py  test_git_parser.py  test_llm_engine.py  test_phase7.py  test_security_engine.py
