[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurodiff"
version = "0.1.0"
description = "Complete open-source CLI tool for semantic git diff analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NeuroDiff Contributors"}
]
keywords = [
    "git",
    "diff",
    "semantic-analysis",
    "ast",
    "security",
    "code-duplication"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tree-sitter>=0.21",
    "tree-sitter-languages>=1.10",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "networkx>=3.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pytest-asyncio>=0.21.0",
]
# semgrep only works on Linux/macOS (or Windows WSL)
# Install separately: pip install semgrep  (Linux/WSL only)
security = [
    "semgrep>=1.70",
]

[project.scripts]
neurodiff = "neurodiff.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["neurodiff"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
